# girlpound-bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  ecosystem.config.js  emoji.json  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: prod.yml
.sqlx/: query-9522d463a91a3a21d0abbed40fe45b64dd30b3821b3b3d8667a80c4bb5bf5b3a.json  query-a0cc0cf75f123843ed923def79b52edc0eb2294b1f409915c3b6fce1e19b41ac.json  query-a276358f53a226d4b135123b17c0dc9a989f7fee720977cad1db0c6b035ad3fb.json  query-a452d8b63542cebbd67dfab6d5320e561c599dd9f4f69b702f6e455ded4de9ee.json  query-a9092691eb38029cee9b024631e86845a13d6d4a77828ad02295ba49d3023719.json  query-b605d202dcb31b6d081d0375da1c4b409cc59614a5fd9065da1f15aaf7e2ca06.json  query-bc6d5ff50ca6d535dc876eec08197b7ceb3373c59fe1885ea87c203e671ae117.json
api/: Cargo.toml
api/src/: lib.rs
bot/: Cargo.toml
bot/src/: discord.rs  main.rs
bot/src/discord/: commands.rs  emojirank.rs  media_cooldown.rs  new_user.rs  nsfw_callout.rs  on_component_interaction.rs  on_delete.rs  on_message.rs  on_react.rs  player_count.rs
bot/src/discord/commands/: bibleverse.rs  birthday_check.rs  botsay.rs  catcoin.rs  map.rs  mods.rs  profile.rs  pug.rs  remindme.rs  seederboard.rs  stocks.rs  teamcaptain.rs  util.rs  wacky.rs
cardgames/: Cargo.toml
cardgames/src/: lib.rs  poker.rs
catcoin/: Cargo.toml
catcoin/src/: drops.rs  duels.rs  inventory.rs  lib.rs  random_pulls.rs
common/: Cargo.toml
common/src/: discord.rs  lib.rs  util.rs
emoji/: Cargo.toml
emoji/src/: lib.rs
genimg/: Cargo.toml
genimg/src/: lib.rs
logstf/: Cargo.toml
logstf/src/: lib.rs
migrations/: 20231018094716_vengeance.sql  20231213032030_girlgift.sql  20231213035835_catsmas.sql  20231215225852_catsmas_partner.sql  20231216001159_catsmas_ready.sql  20240216042916_bark_list.sql  20240305013155_treats.sql  20240306062815_hicat.sql  20240312164143_emojitable.sql  20240315195339_catcoin.sql  20240315203831_seederboard.sql  20240318022537_profile.sql  20240318212745_profile_favmap.sql  20240318220337_profile_votes.sql  20240319031000_profile_color.sql  20240319034203_profile_timestamps.sql  20240319053042_profile_timestamp_not_null.sql  20240319164644_profile_ts_not_null_fix.sql  20240319180810_profile_views.sql  20240320063257_profile_hide_votes.sql  20240322233400_remindme.sql  20240330190712_profile_hide_steam.sql  20240330233513_profile_bff.sql  20240604040644_catcoin_rewards.sql  20240604042801_catcoin_reward_count.sql  20240610202548_more_plushies.sql  20240628153819_catcoin_inv.sql  20240628184807_path_typo.sql  20240708190713_stocks.sql  20240708194932_stock_companies.sql  20240708203802_stock_fake_day.sql  20240716205852_more_plushies.sql  20240808154844_delete-server.sql  20240905025016_yapawards.sql  20240923030006_logstf_lastposted.sql  20241001195552_more_rewards.sql  20250422012548_dihh.sql
profile/: Cargo.toml
profile/src/: edits.rs  lib.rs  vote.rs
rust-rcon/src/: packet.rs
seederboard/: Cargo.toml
seederboard/src/: lib.rs  tracker.rs
sourcebans/: Cargo.toml
sourcebans/src/: lib.rs
src/: bptf.rs  discord.rs  ftp.rs  gameme.rs  logs.rs  main.rs  psychostats.rs  steamid.rs  tf2_rcon.rs  tf2class.rs  util.rs  wacky_wednesday.rs
src/api/: mod.rs
src/catcoin/: command.rs  drops.rs  inv.rs  mod.rs  random_drops.rs  random_pulls.rs
src/discord/: commands.rs  emojirank.rs  log_handler.rs  media_cooldown.rs  new_user.rs  nsfw_callout.rs  on_component_interaction.rs  on_delete.rs  on_message.rs  on_react.rs  player_count.rs
src/discord/commands/: bibleverse.rs  birthday_check.rs  botsay.rs  catsmas.rs  emojitop.rs  girlgift.rs  map.rs  mods.rs  pug.rs  remindme.rs  teamcaptain.rs  util.rs  wacky.rs
src/logs/: discord.rs  parsing.rs  util.rs
src/profile/: command.rs  edits.rs  mod.rs  steam.rs  vote.rs
src/seederboard/: command.rs  mod.rs  tracker.rs
src/sourcebans/: mod.rs
src/stocks/: mod.rs  plot.rs
src/treats/: command.rs  mod.rs
stats/: Cargo.toml
stats/src/: gameme.rs  hlstats.rs  lib.rs  psychostats.rs
steam/: Cargo.toml
steam/src/: lib.rs  profile.rs
stocks/: Cargo.toml
stocks/src/: account.rs  company.rs  lib.rs  plot.rs  price_history.rs  transaction.rs  ui.rs
tf2/: Cargo.toml
tf2/src/: class.rs  files.rs  ftp.rs  lib.rs  logs.rs  rcon.rs  server.rs  sftp.rs  wacky.rs
tf2/src/logs/: discord.rs  util.rs
yapawards/: Cargo.toml
yapawards/src/: lib.rs
