[package]
name = "girlpound-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
nom = "7.1.3"
poise = "0.5.6"
rand = "0.8.5"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.9.6"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["full"] }
