[workspace]
members = ["tf2", "bot", "common", "stats", "api", "catcoin", "steam", "sourcebans", "seederboard", "profile", "stocks", "yapawards", "logstf", "genimg", "emoji", "cardgames"]
default-members = ["bot"]
resolver = "2"

[patch.crates-io]
serenity = { git = "https://github.com/sarahkittyy/serenity.git" }
