[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tf2 = { path = "../tf2" }
common = { path = "../common" }
stats = { path = "../stats" }
catcoin = { path = "../catcoin" }
api = { path = "../api" }
steam = { path = "../steam" }
sourcebans = { path = "../sourcebans" }
seederboard = { path = "../seederboard" }
profile = { path = "../profile" }
stocks = { path = "../stocks" }
yapawards = { path = "../yapawards" }
logstf = { path = "../logstf" }
genimg = { path = "../genimg" }
emoji = { path = "../emoji" }
cardgames = { path = "../cardgames" }

chrono = "0.4.31"
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.9.6"
reqwest = { version = "0.11.22", features = ["json"] }
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
uwuify = "0.2.2"
emojito = "0.3.5"
tokio-cron-scheduler = "0.10.0"
chrono-tz = "0.8.6"
humantime = "2.1.0"
log = "0.4"
fern = "0.6.2"