[package]
name = "catcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
chrono = "0.4.31"
emoji = { path = "../emoji" }

sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
poise = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.9.6"
log = "0.4"
image = { version = "0.25.1", default-features = false, features = ["png"] }