[package]
name = "logstf"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

chrono = "0.4.31"
poise = "0.6.1"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }