[package]
name = "steam"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
stats = { path = "../stats" }

poise = "0.6.1"
regex = "1.9.6"
reqwest = { version = "0.11.22", features = ["json"] }
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }