[package]
name = "yapawards"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
catcoin = { path = "../catcoin" }

chrono = "0.4.31"
chrono-tz = "0.8.6"
poise = "0.6.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"